--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.1",
+    "nodemailer": "^6.7.7",
     "nodemon": "^2.0.19",
+    "react-native-email": "^2.1.0",
     "twilio": "^3.80.0"
   }
 }
