--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "form-data": "^4.0.0",
+    "formidable": "^2.0.1",
+    "fs": "^0.0.1-security",
+    "http": "^0.0.1-security",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.1",
